--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ViajaConNosotros - Agencia de Viajes</title>
+  <title>PowerSports - Agencia Deportiva</title>
   <style>
-    /* Reset */
     * {
       margin: 0;
       padding: 0;
@@ -13,14 +12,35 @@
     }
 
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      background-color: #f4f4f4;
+      font-family: 'Arial', sans-serif;
+      background: #f4f4f4;
       color: #333;
+      line-height: 1.6;
+    }
+
+    nav {
+      background: #0077b6;
+      padding: 15px 20px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #90e0ef;
     }
 
     header {
-      background: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
+      background: url('https://images.unsplash.com/photo-1605296867304-46d5465a13f1?auto=format&fit=crop&w=1600&q=80') no-repeat center center/cover;
       height: 90vh;
       display: flex;
       flex-direction: column;
@@ -46,41 +66,27 @@
     header h1 {
       font-size: 3rem;
       margin-bottom: 10px;
+      text-transform: uppercase;
     }
 
     header p {
-      font-size: 1.3rem;
+      font-size: 1.2rem;
       margin-bottom: 20px;
     }
 
     header a {
-      background: #ff7b00;
-      color: white;
+      background: #ffb703;
+      color: black;
       padding: 12px 25px;
       border-radius: 25px;
       text-decoration: none;
+      font-weight: bold;
       transition: 0.3s;
     }
 
     header a:hover {
-      background: #e56b00;
-    }
-
-    nav {
-      background: #ff7b00;
-      padding: 10px 20px;
-      text-align: center;
-    }
-
-    nav a {
+      background: #fb8500;
       color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
     }
 
     section {
@@ -88,7 +94,7 @@
       text-align: center;
     }
 
-    .destinos {
+    .actividades {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 20px;
@@ -98,7 +104,7 @@
     .card {
       background: white;
       border-radius: 15px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
       overflow: hidden;
       transition: transform 0.3s ease;
     }
@@ -115,67 +121,17 @@
 
     .card h3 {
       margin: 15px 0;
-      color: #ff7b00;
+      color: #0077b6;
     }
 
-    footer {
-      background: #333;
-      color: white;
-      padding: 20px;
-      text-align: center;
+    form input, form textarea, form button {
+      margin: 10px 0;
+      padding: 10px;
+      width: 80%;
+      max-width: 500px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
-  </style>
-</head>
-<body>
 
-  <nav>
-    <a href="#inicio">Inicio</a>
-    <a href="#destinos">Destinos</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-
-  <header id="inicio">
-    <h1>ViajaConNosotros</h1>
-    <p>Descubre el mundo con las mejores experiencias y precios</p>
-    <a href="#destinos">Explorar destinos</a>
-  </header>
-
-  <section id="destinos">
-    <h2>Nuestros Destinos</h2>
-    <p>Elige entre los lugares más increíbles del mundo</p>
-    <div class="destinos">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad?auto=format&fit=crop&w=800&q=80" alt="París">
-        <h3>París</h3>
-        <p>La ciudad del amor te espera con su encanto único.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1526779259212-939e64788e3c?auto=format&fit=crop&w=800&q=80" alt="Nueva York">
-        <h3>Nueva York</h3>
-        <p>La ciudad que nunca duerme con experiencias inolvidables.</p>
-      </div>
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1505761671935-60b3a7427bad?auto=format&fit=crop&w=800&q=80" alt="Tokio">
-        <h3>Tokio</h3>
-        <p>Modernidad y tradición en una ciudad vibrante.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contacto">
-    <h2>Contáctanos</h2>
-    <p>¿Listo para tu próxima aventura? Escríbenos y planeemos tu viaje.</p>
-    <form>
-      <input type="text" placeholder="Nombre" required style="padding:10px; width:250px; margin:5px;">
-      <input type="email" placeholder="Correo" required style="padding:10px; width:250px; margin:5px;"><br>
-      <textarea placeholder="Tu mensaje" required style="padding:10px; width:520px; margin:5px; height:120px;"></textarea><br>
-      <button type="submit" style="background:#ff7b00; color:white; padding:10px 20px; border:none; border-radius:20px; cursor:pointer;">Enviar</button>
-    </form>
-  </section>
-
-  <footer>
-    <p>© 2025 ViajaConNosotros | Todos los derechos reservados</p>
-  </footer>
-
-</body>
-</html>
+    form button {
+      background: #0077b6;
