--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
     <p>Entrena, diviértete y supera tus límites con nosotros</p>
     <div class="actividades">
       <div class="card">
-        <img src="C:\Users\Sala de Computo 12\Documents\RiveraAxel\gimnasio.jpg" alt="Gimnasio">
+        <img src="gimnasio.jpg" alt="Gimnasio">
         <h3>Gimnasio</h3>
         <p>Entrenamiento de fuerza y acondicionamiento físico.</p>
       </div>
       <div class="card">
-        <img src="C:\Users\Sala de Computo 12\Documents\RiveraAxel\fut.jpg" alt="Fútbol">
+        <img src="fut.jpg" alt="Fútbol">
         <h3>Fútbol</h3>
         <p>Únete a nuestros equipos y vive la pasión por el balón.</p>
       </div>
       <div class="card">
-        <img src="C:\Users\Sala de Computo 12\Documents\RiveraAxel\natacion.jpg" alt="Natación">
+        <img src="natacion.jpg" alt="Natación">
         <h3>Natación</h3>
         <p>Mejora tu resistencia y técnica en nuestras albercas.</p>
       </div>
       <div class="card">
-        <img src="C:\Users\Sala de Computo 12\Documents\RiveraAxel\box.jpg" alt="Box">
+        <img src="box.jpg" alt="Box">
         <h3>Box</h3>
         <p>Defiende, golpea y fortalece tu cuerpo y mente.</p>
       </div>
